cluster/development/forgejo-runner/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: forgejo-runner
    app.kubernetes.io/version: "13.2"
  name: forgejo-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: forgejo-runner
  template:
    metadata:
      labels:
        app.kubernetes.io/name: forgejo-runner
        app.kubernetes.io/version: "13.2"
    spec:
      automountServiceAccountToken: false
      containers:
      - command:
        - /bin/sh
        - -c
        - |
          [...]
        image: code.forgejo.org/forgejo/runner:13.2
        name: forgejo-runner
        volumeMounts:
        - mountPath: /data
          name: runner-data
        - mountPath: /cache
          name: runner-cache
        - mountPath: /var/run/docker-shared
          name: docker-sock
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
      - args:
        - --host=unix:///var/run/docker-shared/docker.sock
        - --group=1000
        image: docker:29-dind
        name: docker
        volumeMounts:
        - mountPath: /certs
          name: docker-certs
        - mountPath: /var/run/docker-shared
          name: docker-sock
        - mountPath: /var/lib/docker
          name: docker-storage
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: 4000m
            memory: 8Gi
        securityContext:
          privileged: true
      - command:
        - /bin/sh
        - -c
        - |
          [...]
        image: docker:29-cli
        name: image-warmer
        volumeMounts:
        - mountPath: /var/run/docker-shared
          name: docker-sock
        - mountPath: /dockerfiles
          name: ci-dockerfiles
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            cpu: 200m
            memory: 128Mi
      volumes:
      - name: runner-data
        emptyDir: {}
      - name: runner-cache
        hostPath:
          path: /var/lib/forgejo-runner/0/cache
          type: DirectoryOrCreate
      - name: docker-storage
        hostPath:
          path: /var/lib/forgejo-runner/0/docker
          type: DirectoryOrCreate
      - name: docker-certs
        emptyDir: {}
      - name: docker-sock
        emptyDir: {}
      - name: ci-dockerfiles
        configMap:
          name: forgejo-runner-dockerfiles
      securityContext:
        fsGroup: 1000
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/hostname: debian-mgt-0
